--- a/.gitignore
+++ b/.gitignore
@@ -446,3 +446,4 @@ ASALocalRun/
 
 # End of https://www.gitignore.io/api/java,java-web,intellij+all,visualstudio
 .idea/workspace.xml
+/nbproject/private/
