Novas Classes Controller
Controller de todas as Classes

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -1,8 +1,88 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns="http://java.sun.com/xml/ns/javaee"
-           xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-           xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
-		  http://java.sun.com/xml/ns/javaee/web-app_4_0.xsd"
-           version="4.0">
-
+<web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
+    <servlet>
+        <servlet-name>PesquisaClienteController</servlet-name>
+        <servlet-class>controller.PesquisaClienteController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>PesquisaComidaController</servlet-name>
+        <servlet-class>controller.PesquisaComidaController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>PesquisaComidaPedida</servlet-name>
+        <servlet-class>controller.PesquisaComidaPedida</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>PesquisaCompraController</servlet-name>
+        <servlet-class>controller.PesquisaCompraController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>PesquisaFavoritoController</servlet-name>
+        <servlet-class>controller.PesquisaFavoritoController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>PesquisaHistoricoController</servlet-name>
+        <servlet-class>controller.PesquisaHistoricoController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>PesquisaLojaController</servlet-name>
+        <servlet-class>controller.PesquisaLojaController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>PesquisaPedidoController</servlet-name>
+        <servlet-class>controller.PesquisaPedidoController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>PesquisaTipoCozinhaController</servlet-name>
+        <servlet-class>controller.PesquisaTipoCozinhaController</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>PesquisaTipoCulinariaController</servlet-name>
+        <servlet-class>controller.PesquisaTipoCulinariaController</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>PesquisaClienteController</servlet-name>
+        <url-pattern>/PesquisaClienteController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>PesquisaComidaController</servlet-name>
+        <url-pattern>/PesquisaComidaController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>PesquisaComidaPedida</servlet-name>
+        <url-pattern>/PesquisaComidaPedida</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>PesquisaCompraController</servlet-name>
+        <url-pattern>/PesquisaCompraController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>PesquisaFavoritoController</servlet-name>
+        <url-pattern>/PesquisaFavoritoController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>PesquisaHistoricoController</servlet-name>
+        <url-pattern>/PesquisaHistoricoController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>PesquisaLojaController</servlet-name>
+        <url-pattern>/PesquisaLojaController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>PesquisaPedidoController</servlet-name>
+        <url-pattern>/PesquisaPedidoController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>PesquisaTipoCozinhaController</servlet-name>
+        <url-pattern>/PesquisaTipoCozinhaController</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>PesquisaTipoCulinariaController</servlet-name>
+        <url-pattern>/PesquisaTipoCulinariaController</url-pattern>
+    </servlet-mapping>
+    <session-config>
+        <session-timeout>
+            30
+        </session-timeout>
+    </session-config>
 </web-app>
