--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -26,8 +26,6 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.mysql-connector-java-5.1.47-bin.jar=lib/mysql-connector-java-5.1.47-bin.jar
-file.reference.mysql-connector-java-5.1.47.jar=lib/mysql-connector-java-5.1.47.jar
 file.reference.nyahfood-src=src
 includes=**
 j2ee.compile.on.save=true
@@ -39,9 +37,8 @@ j2ee.server.type=Tomcat
 jar.compress=false
 java.source.based=true
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.47.jar}:\
-    ${file.reference.mysql-connector-java-5.1.47-bin.jar}:\
-    ${libs.MySQLDriver.classpath}
+    ${libs.MySQLDriver.classpath}:\
+    ${libs.jstl.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
