--- a/.gitignore
+++ b/.gitignore
@@ -447,3 +447,4 @@ ASALocalRun/
 # End of https://www.gitignore.io/api/java,java-web,intellij+all,visualstudio
 .idea/workspace.xml
 /nbproject/private/
+/dist/
