Boa sorte a todos ultimo commit antes da entrega
TENTAMOS PESSOAL!!!!!

--- a/.gitignore
+++ b/.gitignore
@@ -448,3 +448,6 @@ ASALocalRun/
 .idea/workspace.xml
 /nbproject/private/
 /dist/
+/docs/SalvarImagem/build/
+/docs/SalvarImagem/dist/
+/docs/SalvarImagem/nbproject/private/
