--- a/.gitignore
+++ b/.gitignore
@@ -451,3 +451,9 @@ ASALocalRun/
 /docs/SalvarImagem/build/
 /docs/SalvarImagem/dist/
 /docs/SalvarImagem/nbproject/private/
+/SalvarImagem/build/
+/SalvarImagem/dist/
+/SalvarImagem/nbproject/private/
+/src/SalvarImagem/build/
+/src/SalvarImagem/dist/
+/src/SalvarImagem/nbproject/private/
