--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -26,6 +26,15 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.commons-beanutils-1.8.2.jar=lib\\commons-beanutils-1.8.2.jar
+file.reference.commons-collections-3.2.1.jar=lib\\commons-collections-3.2.1.jar
+file.reference.commons-digester-2.1.jar=lib\\commons-digester-2.1.jar
+file.reference.commons-digester-2.1__1_.jar=lib\\commons-digester-2.1 (1).jar
+file.reference.commons-javaflow-20060411.jar=lib\\commons-javaflow-20060411.jar
+file.reference.commons-javaflow-20060411__1_.jar=lib\\commons-javaflow-20060411 (1).jar
+file.reference.commons-logging-1.1.jar=lib\\commons-logging-1.1.jar
+file.reference.iText-2.1.7.jar=lib\\iText-2.1.7.jar
+file.reference.jasperreports-5.0.4.jar=lib\\jasperreports-5.0.4.jar
 file.reference.nyahfood-src=src
 includes=**
 j2ee.compile.on.save=true
@@ -38,7 +47,16 @@ jar.compress=false
 java.source.based=true
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
-    ${libs.jstl.classpath}
+    ${libs.jstl.classpath}:\
+    ${file.reference.commons-beanutils-1.8.2.jar}:\
+    ${file.reference.commons-collections-3.2.1.jar}:\
+    ${file.reference.commons-digester-2.1__1_.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-javaflow-20060411__1_.jar}:\
+    ${file.reference.commons-javaflow-20060411.jar}:\
+    ${file.reference.commons-logging-1.1.jar}:\
+    ${file.reference.iText-2.1.7.jar}:\
+    ${file.reference.jasperreports-5.0.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
